I am updating restaurant menu's looks.

--- a/foodpedia/src/components/filter/Filter.css
+++ b/foodpedia/src/components/filter/Filter.css
@@ -1,7 +1,19 @@
-.custom-filter {
-    border-radius: 20px;
-}
-.filter-allover{
-    display: flex;
-    justify-content: space-around;
-}
+    .custom-filter {
+        border-radius: 20px;
+        border: none;
+    }
+    .filter-allover{
+        display: flex;
+        justify-content: space-around;
+        border: none;
+    }
+    .button {
+        background-color: #4CAF50; 
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+      }
