--- a/foodpedia/src/components/stylesheet.css
+++ b/foodpedia/src/components/stylesheet.css
@@ -67,6 +67,7 @@
   outline: none;
   padding: 12px 16px;
   background-color: #f1f1f1;
+  border: none;
   cursor: pointer;
 }
 
@@ -77,4 +78,15 @@
 .btn.active {
   background-color: #666;
   color: white;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
