--- a/foodpedia/src/components/stylesheet.css
+++ b/foodpedia/src/components/stylesheet.css
@@ -103,3 +103,24 @@
   background-repeat: no-repeat;
   width: 10px;
   height: 20px;}
+
+  .main-topic{
+    border:1px solid blue;
+  }
+  /** Clearfix **/
+  .main-topic::after{
+    content:"";
+    display:block;
+    clear:both;
+  }
+  .left-text{
+    width:50%;
+    float:left;
+  }
+  .right-picture{
+    float:right;
+    width:50%;
+  }
+  .right-picture img{
+    max-width:100%
+  }
