--- a/foodpedia/src/components/dev.css
+++ b/foodpedia/src/components/dev.css
@@ -26,7 +26,7 @@
 /* Products Table */
 
 .cartPage {
-  margin: 80px 8rem;
+  /* margin: 80px 8rem; */
   border-right: 1px solid grey;
 }
 
@@ -47,8 +47,8 @@
 
 .cartPage th {
   text-align: left;
-  padding: 5px;
-  padding-left: 60px;
+  /* padding: 5px; */
+  /* padding-left: 60px; */
   color: black;
   background-color: #d9d9d9;
   font-weight: normal;
@@ -105,7 +105,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.5rem;
-  height: 1px;
+  /* height: 1px; */
 }
 
 .linko {
@@ -113,7 +113,7 @@
   background-color: orange;
   font-size: 20px;
 
-  height: 7vh;
+  /* height: 7vh; */
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -130,14 +130,14 @@
 .mainPaymentContainer {
   display: flex;
   width: 100%;
-  height: 80vh;
+  /* height: 80vh; */
   /* background-color: yellow; */
 }
 
 .paymentLeft {
   display: flex;
   width: 60%;
-  height: 100vh;
+  /* height: 100vh; */
   border-right: 1px gray solid;
   flex-direction: column;
   justify-content: space-around;
@@ -158,9 +158,9 @@
   display: flex;
 }
 .deliveryTimeInfo img {
-  width: 15rem;
-  height: 12vh;
-  margin-top: -3rem;
+  width: 8rem;
+  /* height: 12vh;
+  margin-top: -3rem; */
 }
 
 .addressInfo {
@@ -246,10 +246,13 @@
 }
 
 .orderSummary {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  align-items: flex-start;
+  padding: 17px;
+    border: 1px solid #0b0b0b52;
+    border-radius: 15px;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
 }
 .orderInfo {
   width: 100%;
@@ -286,10 +289,10 @@
 
 .placeOrder {
   width: 30%;
-  height: 8vh;
-  position: absolute;
-  left: 64%;
-  top: 104%;
+  /* height: 8vh; */
+  /* position: absolute; */
+  /* left: 64%;
+  top: 104%; */
   background-color: orange;
   border: none;
   border-radius: 10px;
@@ -308,7 +311,7 @@
 
 .mainConfirmPage {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -316,21 +319,23 @@
 }
 
 .ConfirmImage img {
-  width: 440px;
+  width: 269px;
   transform: rotate(265deg);
 }
 
 .ConfirmButtons {
   display: flex;
-
-  width: 28%;
+  flex-wrap: wrap;
+  margin: 10px;
+  align-items: center;
+  /* width: 28%; */
   justify-content: space-between;
 }
 
 .ConfirmButtons button {
   font-size: 1.4rem;
-  width: 15rem;
-  height: 7vh;
+  /* width: 15rem; */
+  /* height: 7vh; */
   border: none;
   background-color: orange;
   border-radius: 5px;
@@ -350,18 +355,22 @@
 } */
 
 .popupInfo {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  background-color: white;
-  width: 30%;
-  height: 60vh;
-  position: absolute;
-  top: 30%;
-  left: 35%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
-  border-radius: 10px;
+  z-index: 20;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    background-color: white;
+    /* width: 30%; */
+    /* height: 60vh; */
+    position: absolute;
+    top: 20%;
+    left: 0;
+    margin-right: 10%;
+    margin-left: 10%;
+    right: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10px;
 }
 
 .popupText {
@@ -380,8 +389,8 @@
   border: none;
   background-color: orange;
   font-size: 1.2rem;
-
-  height: 5vh;
+  margin: 10px;
+  /* height: 5vh; */
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -393,4 +402,14 @@
 
 .popupInfo button:hover {
   color: whitesmoke;
+}
+
+
+.paymentMethods {
+  display: flex;
+  align-items: center;
+}
+
+.placeOrder {
+  width: 100%;
 }
