--- a/foodpedia/src/components/dev.css
+++ b/foodpedia/src/components/dev.css
@@ -112,7 +112,7 @@
   border: none;
   background-color: orange;
   font-size: 20px;
-
+  padding: 12px;
   /* height: 7vh; */
   border-radius: 5px;
   display: flex;
